force-app/main/default/objects/QB_Payment__c/QB_Payment__c.object-meta.xml
<CustomObject>
    <description>Payment Events from QuickBooks</description>
    <label>QB Payment</label>
    <nameField>
        <label>QB payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>