force-app/main/default/objects/QB_Payment__c/fields/QB_Account__c.field-meta.xml
<CustomField>
    <fullName>QB_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional Lookup to Salesforce Account to allow related list under Accounts</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>QB_payments</relationshipName>
    <type>Lookup</type>
</CustomField>