force-app/main/default/objects/QB_Payment__c/fields/QB_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>QB_Amount_Received__c</fullName>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>