force-app/main/default/objects/QB_Payment__c/fields/QB_Amount_Unapplied__c.field-meta.xml
<CustomField>
    <fullName>QB_Amount_Unapplied__c</fullName>
    <description>UnappliedAmt or Amount Credited</description>
    <label>Amount Unapplied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>