force-app/main/default/objects/QB_Payment__c/fields/QB_Created_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Created_in_QBO_Date__c</fullName>
    <description>CreateTime of Payment in QuickBooks</description>
    <label>Created in QuickBooks Date</label>
    <type>DateTime</type>
</CustomField>