force-app/main/default/objects/QB_Payment__c/fields/QB_Created_via__c.field-meta.xml
<CustomField>
    <fullName>QB_Created_via__c</fullName>
    <label>Created via</label>
    <length>255</length>
    <type>Text</type>
</CustomField>