force-app/main/default/objects/QB_Payment__c/fields/QB_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>QB_Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>