force-app/main/default/objects/QB_Payment__c/fields/QB_Customer__c.field-meta.xml
<CustomField>
    <fullName>QB_Customer__c</fullName>
    <description>Relates to  Account Connection object</description>
    <label>Customer</label>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipName>QB_payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>