force-app/main/default/objects/QB_Payment__c/fields/QB_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>QB_Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>