force-app/main/default/objects/QB_Payment__c/fields/QB_Memo__c.field-meta.xml
<CustomField>
    <fullName>QB_Memo__c</fullName>
    <label>Memo</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>