force-app/main/default/objects/QB_Payment__c/fields/QB_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Org_ID__c</fullName>
    <label>QuickBooks Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>