force-app/main/default/objects/QB_Payment__c/fields/QB_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>