force-app/main/default/objects/QB_Payment__c/fields/QB_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Id__c</fullName>
    <description>Id field of the Payment
Format: [CompanyID]-[PaymentID]</description>
    <externalId>true</externalId>
    <label>Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>