force-app/main/default/objects/QB_Payment__c/fields/QB_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Method__c</fullName>
    <description>Payment Method Name</description>
    <label>Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>