force-app/main/default/objects/QB_Payment__c/fields/QB_Payment_Method_Ref__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Method_Ref__c</fullName>
    <description>Payment Method Reference number</description>
    <label>Payment Method Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>