force-app/main/default/objects/QB_Payment__c/fields/QB_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>