force-app/main/default/objects/QB_Payment__c/fields/QB_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>QB_Reference_Number__c</fullName>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>